dataset1235/2025-2/2318198438/users/3878856075/executions/2601575092_2650572580.log
== RUN (2025-08-15 16:50:19)
-- CODE: 
print("*****" )
print(("* o o *"/))
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(("* o o *"/))
                     ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(("* o o *"/))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:12:59)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:17:55)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:12:53)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:10:53)
-- CODE: 
print(" *****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:24:18)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print( " *****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:12:15)
-- CODE: 
print( "*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:09:43)
-- CODE: 
print("*****" )
prin("* o o *") 
print((*  ^  *))
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print((*  ^  *))
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print((*  ^  *))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:12:55)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:10:49)
-- CODE: 
print("*****" )
prin((* o o *)) 
print("*^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    prin((* o o *)) 
            ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    prin((* o o *)) 
            ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:12:54)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:24:40)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print( "  *****")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:09:28)
-- CODE: 
print("*****" )
prin("* o o *") 
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin("* o o *") 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin("* o o *") 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:12:37)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 20:36:13)
-- CODE: 
print("*****" )
print( ("* o o *") )   
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:17:56)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:22:54)
-- CODE: 
print("*****")
print("(* o o *)")
print()
print()
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
(* o o *)
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
(* o o *)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 16:50:14)
-- CODE: 
print("*****" )
print(/("* o o *"/))
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(/("* o o *"/))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(/("* o o *"/))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:18:27)
-- CODE: 
print("*****" )
print(("* o o *"))
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:12:16)
-- CODE: 
print( "*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:24:27)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print( "*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:21:55)
-- CODE: 
print("*****")
print()
print()
print()
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:11:15)
-- CODE: 
print( "*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print( "*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:13:16)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:22:24)
-- CODE: 
print("*****")
print((* o o *))
print()
print()
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print((* o o *))
             ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print((* o o *))
             ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 16:50:41)
-- CODE: 
print("*****" )
print(("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(("* o o *")
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(("* o o *")
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 16:50:31)
-- CODE: 
print("*****" )
print( ("* o o *") )
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:24:38)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print( "  *****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:24:32)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print( " *****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:13:00)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:11:46)
-- CODE: 
print( "*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print( "*****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 01:11:45)
-- CODE: 
print( "*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print( "*****" )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:12:23)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:09:35)
-- CODE: 
print("*****" )
prin("* o o *") 
print(*  ^  *)
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print(*  ^  *)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 3
    print(*  ^  *)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:11:10)
-- CODE: 
print( "*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print( "*****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:10:47)
-- CODE: 
print(" *****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:10:38)
-- CODE: 
print("*****" )
prin((* o o *)) 
print("*^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    prin((* o o *)) 
            ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    prin((* o o *)) 
            ^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:12:35)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:24:11)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print(" *****")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 16:50:32)
-- CODE: 
print("*****" )
print( ("* o o *") )
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:23:55)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 * --- *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 * --- *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:08:57)
-- CODE: 
print("*****" )
prin("* o o *") 
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin("* o o *") 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin("* o o *") 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:11:41)
-- CODE: 
print( "*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print( "*****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:23:33)
-- CODE: 
print("*****")
print("(* o o *)")
print(" *  ^  *")
print()
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *  ^  *
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *  ^  *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:18:53)
-- CODE: 
print("*****" )
print(/("* o o *"/))
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(/("* o o *"/))
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
File "XXXX", line 2
    print(/("* o o *"/))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 01:12:39)
-- CODE: 
print("*****" )
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:10:07)
-- CODE: 
print("*****" )
prin("* o o *") 
print("*^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin("* o o *") 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    prin("* o o *") 
    ^^^^
NameError: name 'prin' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 16:50:24)
-- CODE: 
print("*****" )
print(("* o o *"))
print("*  ^  *")
print("* --- *")
print(" *****" )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
-- TEST CASE 2:
---- input:
xx
---- correct output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
---- user output:
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
